# prestige

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  RELEASING.md  compile_commands.json  index.html
.github/workflows/: ci.yml  python-wheels.yml  release.yml  semantic_benchmarks.yml
Formula/: prestige.rb
benchmarks/: store_benchmark.cpp
benchmarks/dataloaders/: __init__.py  cli.py  config.py  datasets.py  metrics.py  models.py  report.py  requirements.txt  runner.py
benchmarks/dataloaders/benchmarks/: __init__.py  contamination.py  detection_quality.py  generalization.py  mode_comparison.py  performance.py  statistical.py
benchmarks/dataloaders/tests/: __init__.py  test_benchmarks.py
benchmarks/semantic_dedup/: README.md  __init__.py  cli.py  dataset_loader.py  metrics.py  models.py  report.py  requirements.txt  runner.py  test_benchmark.py
build-python/: compile_commands.json  prestige_uvs.pc  prestige_uvsConfig.cmake
cmake/: prestige_uvs.pc.in  prestige_uvsConfig.cmake.in
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
debian/: changelog  control  copyright  prestige-dev.install  prestige.install  rules
debs/: prestige-dev_0.1.0_amd64.deb
dists/stable/: Release
dists/stable/main/binary-amd64/: Packages  Release
docs/: api-reference.md  architecture.md  building.md  cache-semantics.md  cli.md  dataloaders.md  normalization.md  observability.md  python-bindings.md  semantic-dedup.md  server.md
examples/: basic.cpp  observability.cpp  semantic.cpp
include/prestige/: embedder.hpp  internal.hpp  judge_llm.hpp  normalize.hpp  reranker.hpp  shutdown.hpp  store.hpp  test_utils.hpp  tokenizer.hpp  vector_index.hpp  version.hpp
include/prestige/server/: config.hpp  handlers.hpp  metrics.hpp  proxy.hpp  server.hpp
pool/main/p/prestige/: prestige_0.1.0_amd64.deb
python/: CMakeLists.txt  pyproject.toml  setup.py
python/examples/: README.md  basic.py  embedding_cache.py  reranker_example.py
python/prestige/: __init__.py  py.typed
python/prestige/dataloaders/: __init__.py  config.py  contamination.py  datasets.py  dedup_store.py  hf_integration.py  metrics.py  streaming.py  utils.py
python/src/: bindings.cpp  exceptions.cpp  exceptions.hpp  options_bindings.cpp  options_bindings.hpp  store_bindings.cpp  store_bindings.hpp
python/tests/: __init__.py  conftest.py  test_store.py
python/tests/test_dataloaders/: __init__.py  conftest.py  test_config.py  test_contamination.py  test_datasets.py  test_dedup_store.py  test_hf_integration.py  test_metrics.py  test_streaming.py  test_utils.py
src/: embedder.cpp  judge_llm.cpp  normalize.cpp  reranker.cpp  shutdown.cpp  store.cpp  tokenizer.cpp  vector_index.cpp
src/server/: config.cpp  handlers.cpp  metrics.cpp  proxy.cpp  server.cpp
tests/: cache_test.cpp  crash_test.cpp  integration_test.cpp  internal_test.cpp  judge_test.cpp  normalize_test.cpp  reranker_test.cpp  semantic_test.cpp  server_test.cpp  store_test.cpp
tools/: prestige_cli.cpp  prestige_server.cpp
